fix: search results image preview on mobile

--- a/src/styles/components/_lf-search-result.scss
+++ b/src/styles/components/_lf-search-result.scss
@@ -35,6 +35,7 @@
 			justify-content: center;
 			align-items: center;
 			translate: -50% -50%;
+			z-index: 1;
 		}
 
 		&-preview {
@@ -44,6 +45,22 @@
 			visibility: hidden;
 			opacity: 0;
 			pointer-events: none;
+
+			& > img {
+				width: 100%;
+			}
 		}
+	}
+
+	&__price {
+		font-size: 12rem;
+		line-height: 1;
+		letter-spacing: 0.05em;
+		font-weight: 700;
+		color: var(--black);
+		font-family:
+			Tt Norms Pro Serif,
+			sans-serif;
+		font-style: italic;
 	}
 }
